<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_line_2"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/appCompatImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/appCompatImageButton1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_button_back"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>



    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageViewQA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/ic_qa" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/first_title"
                style="@style/GuideTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_first_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/first_text"
                android:textAlignment="center"
                style="@style/GuideTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_first_text" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/second_title"
                style="@style/GuideTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_second_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/second_text"
                style="@style/GuideTextDescription"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_second_text" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/third_title"
                style="@style/GuideTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_third_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/third_text"
                style="@style/GuideTextDescription"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_third_text" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fourth_title"
                style="@style/GuideTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_fourth_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fourth_text"
                style="@style/GuideTextDescription"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_fourth_text" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fifth_title"
                style="@style/GuideTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_fifth_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fifth_text"
                style="@style/GuideTextDescription"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_fifth_text" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sixth_title"
                style="@style/GuideTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_sixth_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sixth_text"
                android:textAlignment="center"
                style="@style/GuideTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_sixth_text" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>