<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_line_2"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/appCompatImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/appCompatImageButton1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_button_back"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewEng"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="0dp" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/eng"
            android:textColor="@color/white"
            android:layout_gravity="center|left"
            android:layout_marginLeft="38dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewEng"
        app:srcCompat="@drawable/ic_line" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewRus"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:layout_editor_absoluteX="0dp" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_rus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="38dp"
            android:textSize="28sp"
            android:text="@string/rus"
            android:textColor="@color/white"
            />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewRus"
        app:srcCompat="@drawable/ic_line" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewUkr"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:layout_editor_absoluteX="0dp" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_ukr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:textSize="28sp"
            android:text="@string/ukr"
            android:textColor="@color/white"
            android:layout_marginLeft="38dp"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewUkr"
        app:srcCompat="@drawable/ic_line" />



</androidx.constraintlayout.widget.ConstraintLayout>